Fix adoration panel width to prevent iframe overflow
Increased panel width to 370px to fit 350px iframe with padding.
Increased chaplet margin to 380px accordingly.

--- a/dm/web/modules/custom/divine_mercy/css/eucharist-adoration.css
+++ b/dm/web/modules/custom/divine_mercy/css/eucharist-adoration.css
@@ -8,7 +8,7 @@
   position: fixed;
   top: 50px;
   right: 0;
-  width: 320px;
+  width: 370px;
   z-index: 100;
   background: white;
   border: 1px solid #ccc;
@@ -18,13 +18,13 @@
 
 /* Make room for fixed adoration panel */
 .divine-mercy-chaplet {
-  margin-right: 330px;
+  margin-right: 380px;
   transition: margin-right 0.3s ease;
 }
 
 /* When adoration is collapsed, reduce margin */
 .divine-mercy-chaplet.adoration-collapsed {
-  margin-right: 180px;
+  margin-right: 200px;
 }
 
 .divine-mercy-eucharist-adoration.is-collapsed {
@@ -89,7 +89,8 @@
 
 .adoration-video iframe {
   display: block;
-  max-width: 100%;
+  width: 100%;
+  max-width: 350px;
   border-radius: 3px;
 }
 
